<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MySched</string>
    <string name="widget_description">View your next upcoming class</string>
    
    <!-- App Shortcuts -->
    <string name="shortcut_add_reminder_short">Add Reminder</string>
    <string name="shortcut_add_reminder_long">Add a new reminder</string>
    <string name="shortcut_today_short">Today</string>
    <string name="shortcut_today_long">View today\'s schedule</string>
    <string name="shortcut_timer_short">Timer</string>
    <string name="shortcut_timer_long">Start study timer</string>
    <string name="shortcut_scan_short">Scan</string>
    <string name="shortcut_scan_long">Scan schedule QR code</string>
</resources>
